# FGD_Game2d

./: .gitignore  Apuntes  Bibliografia  Diagrama UML.zargo  Diagrama UML.zargo~  Mainantiguo.txt  Possible ideas  README.md  colision  listado_objetos.txt
Diagrama UML/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Inventory.h  Object.h  Player.h  Potion.cpp  Potion.h  Sword.cpp  Sword.h
Documentació/Documentació acabada/: DiagramaUMLEstados.zargo  DiagramaUMLGameStateManager.zargo
Documentació/Fase d'implemetació/: Explicació_colisionsEfectivesNoEfectives.xcf
FGD/: .project  CMakeLists.txt  FGD.cbp  FGD.depend  FGD.layout
FGD/include/: Animation.h  BaseGame.h  Character.h  DAOManager.h  DAOMap.h  Drawable.h  Enemy.h  GameState.h  GameStateManager.h  House.h  Inventory.h  LoginState.h  LostState.h  Map.h  MenuEscState.h  MenuInitialState.h  MenuInventarioState.h  MenuOptionsGameState.h  MenuOptionsState.h  Music.h  Object.h  Player.h  Potion.h  Shield.h  Skelleton.h  Sword.h  TextState.h  Timer.h  Weapon.h  WinState.h
FGD/src/: Animation.cpp  BaseGame.cpp  BaseGame.cpp.orig  Character.cpp  Drawable.cpp  Enemy.cpp  Enemy.cpp.orig  GameState.cpp  GameStateManager.cpp  House.cpp  Inventory.cpp  LoginState.cpp  LostState.cpp  Map.cpp  MenuEscState.cpp  MenuInitialState.cpp  MenuInventarioState.cpp  MenuInventarioState.cpp.save-failed  MenuOptionsGameState.cpp  MenuOptionsState.cpp  Music.cpp  Object.cpp  Player.cpp  Shield.cpp  Skelleton.cpp  TextState.cpp  Timer.cpp  Weapon.cpp  WinState.cpp
FGD/src/Dao/: DAOManager.cpp  DAOMap.cpp  DAOMap.cpp.orig
FGD/src/Main/: Main.cpp
Otros projectos test/: Allegro.rar
Otros projectos test/Allegro/: Allegro.depend  Allegro.layout  inicia.cpp  main.cpp
Test/: Test.cbp  Test.depend  Test.layout  main.cpp
resourcesFGD/: Player Front & Sword (In Progress..).xcf  Player Front & Sword (In Progress..)2.xcf  Player.xcf  Skelleton Animaciones.xcf  Skelleton.xcf  Sword Front Transparence.xcf
resourcesFGD/FirstMap/: Arbol.xcf
resourcesFGD/Images menus/: charge_game.xcf  charge_game_pressed.xcf  leave.xcf  leave_pressed.xcf  menu_initial.xcf  menu_initial_pressed.xcf  new_game.xcf  new_game_pressed.xcf  options.xcf  options_pressed.xcf
resourcesFGD/Inventario/: Inventario.xcf  Marco.xcf  Sword.xcf  coin_gold.xcf  pagination_1.xcf  pagination_2.xcf  player_inventory.xcf
resourcesFGD/LoginState/: cruz.xcf  enter.xcf  enter_pressed.xcf  recuadroUser_Pass.xcf  recuadroUser_Pass_Pressed.xcf  registrar.xcf  registrar_pressed.xcf  terminar.xcf  terminar_letras.xcf  terminar_pressed.xcf
resourcesFGD/Logo/: shield_logo_all.xcf
resourcesFGD/LostState/: background_lost.xcf
resourcesFGD/Map_1/: agujero_ojos.xcf  arbol_2.xcf  casa.xcf  hierba_alta.xcf
resourcesFGD/Map_3/: lagito.xcf
resourcesFGD/Map_4/: agua.xcf  castle.xcf  puente.xcf
resourcesFGD/Map_5/: castle_dentro.xcf
resourcesFGD/MenuGameEsc/: background_menu_esc.xcf  guardar_partida.xcf  guardar_partida_pressed.xcf  leave_game.xcf  leave_game_pressed.xcf  menu_initial_game.xcf  menu_initial_game_pressed.xcf  options_esc.xcf  options_esc_pressed.xcf  return_game.xcf  return_game_pressed.xcf
resourcesFGD/MenuGameOpciones/: return.xcf  return_pressed.xcf
resourcesFGD/MenuInitial/: level_easy.xcf  level_hard_pressed.xcf  level_medium.xcf  music_pressed.xcf  music_pressed_checked.xcf
resourcesFGD/MenuInitialOpciones/: back.xcf  back_pressed.xcf  level_easy_pressed.xcf  level_hard.xcf  level_medium_pressed.xcf  music.xcf  music_checked.xcf
resourcesFGD/Mouse/: Mouse.xcf
resourcesFGD/Player with Transparences/: Player_W_Trans.xcf
resourcesFGD/Tetrico/: fondo_botones.xcf
resourcesFGD/TextState/: bocadillo_texto.xcf
resourcesFGD/Weapon with transparences/: Left.xcf
resourcesFGD/WinState/: background_win.xcf
