cmake_minimum_required(VERSION 3.10)
project(FGD)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)

add_executable(FGD
        include/BaseGame.h
        include/Character.h
        include/DAOManager.h
        include/DAOMap.h
        include/Drawable.h
        include/Enemy.h
        include/GameState.h
        include/GameStateManager.h
        include/House.h
        include/Inventory.h
        include/LoginState.h
        include/Map.h
        include/MenuEscState.h
        include/MenuInitialState.h
        include/MenuInventarioState.h
        include/MenuOptionsGameState.h
        include/MenuOptionsState.h
        include/Music.h
        include/Object.h
        include/Player.h
        include/Potion.h
        include/Shield.h
        include/Skelleton.h
        include/State.h
        include/Sword.h
        include/Timer.h
        include/Weapon.h
        src/Dao/DAOManager.cpp
        src/Dao/DAOMap.cpp
        src/Main/Main.cpp
        src/BaseGame.cpp
        src/Character.cpp
        src/Drawable.cpp
        src/Enemy.cpp
        src/GameState.cpp
        src/GameStateManager.cpp
        src/House.cpp
        src/Inventory.cpp
        src/LoginState.cpp
        src/Map.cpp
        src/MenuEscState.cpp
        src/MenuInitialState.cpp
        src/MenuInventarioState.cpp
        src/MenuOptionsGameState.cpp
        src/MenuOptionsState.cpp
        src/Music.cpp
        src/Object.cpp
        src/Player.cpp
        src/Potion.cpp
        src/Shield.cpp
        src/Skelleton.cpp
        src/Sword.cpp
        src/Timer.cpp
        src/Weapon.cpp
        main.cpp)
